--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-5 col-md-4 col-lg-3">
-      <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down"></span> Search Filters</a>
+      <a id="btn-search-filters" class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseAllFilters" aria-expanded="false" aria-controls="collapseAllFilters"><span class="glyphicon glyphicon-menu-down"></span> Search Filters</a>
       <div class="collapse in" id="collapseAllFilters">
         <%= form_tag('/search') do %>
-          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
+          <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
           <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
           <div class="search-page-filter collapse" id="collapseFilterType">
             <% $filter_1_values.each do |item| %>
@@ -14,7 +14,7 @@
               </p>
             <% end %>
           </div>
-          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
+          <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
           <div class="search-page-filter collapse" id="collapseFilterResidence">
             <% $filter_2_values.each do |item| %>
               <p class="match-option">
@@ -24,7 +24,7 @@
             <% end %>
           </div>
           
-          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
+          <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
           <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
           <div class="search-page-filter collapse" id="collapseFilterPrograms">
             <% $filter_3_values.each do |item| %>
@@ -35,7 +35,7 @@
             <% end %>
           </div>
           
-          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
+          <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
           <div class="search-page-filter collapse" id="collapseFilterLocation">
             <div style="height:150px; overflow-y:scroll;">
               <% $filter_4_values.each do |item| %>
@@ -44,13 +44,18 @@
                 <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
                 </p>
               <% end %>
-              <p class="match-option"><%= check_box_tag("Delaware", 4) %> Delaware</p>
-              <p class="match-option"><%= check_box_tag("District of Columbia", 4) %> District of Columbia</p>
+              <p class="match-option">
+              <input value="4" class="checkbox-input" type="checkbox" name="Delaware" id="Delaware" />
+              <label class="checkbox-label" for="Delaware">Delaware</label></p>
+              <p class="match-option">
+              <input value="4" class="checkbox-input" type="checkbox" name="District of Columbia" id="District of Columbia" />
+              <label class="checkbox-label" for="District of Columbia">District of Columbia</label></p>
+
             </div>
            <p>&nbsp;</p>
           </div>
             
-          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
+          <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
           <div class="search-page-filter collapse" id="collapseFilterDegrees">
             <% $filter_5_values.each do |item| %>
             <p class="match-option">
@@ -86,7 +91,7 @@
 
       <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
 
-      <h1>Search result: <%= pluralize(@programs.size, 'Dental School') %></h1>
+      <h2>Search result: <%= pluralize(@programs.size, 'Dental School') %></h2>
 
       <% @programs.each do |p| %>
         <h3><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></h3>
