--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h2>Let us help find the right dental program for you.</h2>
+      <h2>Hi, <%= current_user.login %>! Let's help find the right dental program for you.</h2>
       <%= form_tag('/search') do %>
       <h3><%= label_tag(:q, "Enter one or more keywords") %></h3>
       <%= text_field_tag(:q, nil, class: "input form-control") %>
       <h3>Or use the filters below</h3>
         <div>
           <div>
-            <a class="input btn btn-lg btn-filter-index" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
+            <a class="input btn btn-lg btn-filter btn-index-page" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
             <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
             <div class="collapse" id="collapseFilterType">
             <% $filter_1_values.each do |item| %>
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div>
-            <a class="input btn btn-lg btn-filter-index" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
+            <a class="input btn btn-lg btn-filter btn-index-page" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
             <div class="collapse" id="collapseFilterResidence">
               <% $filter_2_values.each do |item| %>
                 <p class="match-option">
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div>
-            <a class="input btn btn-lg btn-filter-index" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
+            <a class="input btn btn-lg btn-filter btn-index-page" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
             <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
             <div class="collapse filter-options" id="collapseFilterPrograms">
               <% $filter_3_values.each do |item| %>
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div>
-          <a class="input btn btn-lg btn-filter-index" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
+          <a class="input btn btn-lg btn-filter btn-index-page" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
             <div class="collapse" id="collapseFilterLocation">
               <div style="height:150px; overflow-y:scroll;">
                 <% $filter_4_values.each do |item| %>
@@ -53,8 +53,12 @@
                   <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
                   </p>
                 <% end %>
-                <p class="match-option"><%= check_box_tag("Delaware", 4) %> Delaware</p>
-                <p class="match-option"><%= check_box_tag("District of Columbia", 4) %> District of Columbia</p>
+                <p class="match-option">
+                <input value="4" class="checkbox-input" type="checkbox" name="Delaware" id="Delaware" />
+                <label class="checkbox-label" for="Delaware">Delaware</label></p>
+                <p class="match-option">
+                <input value="4" class="checkbox-input" type="checkbox" name="District of Columbia" id="District of Columbia" />
+                <label class="checkbox-label" for="District of Columbia">District of Columbia</label></p>
 
 
               </div>
@@ -63,7 +67,7 @@
             </div>
           </div>
           <div>
-            <a class="input btn btn-lg btn-filter-index" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
+            <a class="input btn btn-lg btn-filter btn-index-page" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
             <div class="collapse" id="collapseFilterDegrees">
               <% $filter_5_values.each do |item| %>
               <p class="match-option">
@@ -82,10 +86,11 @@
 
 
       <% end %>
-      <h1><%= pluralize(@programs.size, 'Dental School') %></h1>
+      <h2><%= pluralize(@programs.size, 'Dental School') %></h2>
       <% @programs.each do |p| %>
         
             <h3><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></h3>
+
             <p><a class="btn btn-primary" href="information/<%=p.id%>">VIEW SCHOOL</a></p>
             <hr />
       <% end %>
