--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,15 @@
 
     <!-- fontawesome embed -->
     <script src="https://use.fontawesome.com/5446d1f9f0.js"></script>
+    <!-- google font embed -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+
+
   </head>
 
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-fixed-top">
+      <!-- <div class="container"> -->
         <div id="navbar">
           <!-- <ul class="nav navbar-nav">
             <li><%= link_to 'Home', root_path %></li>
@@ -42,7 +46,7 @@
         </div>
         
         
-      </div>
+      <!-- </div> -->
     </nav>
 
     <div class="container">
