--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -9,7 +9,7 @@
 
           <div class="search-page-filter collapse" id="collapseFilterType">
             <% $filter_1_values.each do |item| %>
-              <p class="match-option">
+              <p class="filter-option">
               <input value="1" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
               <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
               </p>
@@ -19,7 +19,7 @@
           <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
           <div class="search-page-filter collapse" id="collapseFilterResidence">
             <% $filter_2_values.each do |item| %>
-              <p class="match-option">
+              <p class="filter-option">
               <input value="2" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
               <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
               </p>
@@ -30,7 +30,7 @@
           <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
           <div class="search-page-filter collapse" id="collapseFilterPrograms">
             <% $filter_3_values.each do |item| %>
-              <p class="match-option">
+              <p class="filter-option">
               <input value="3" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
               <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
               </p>
@@ -41,15 +41,15 @@
           <div class="search-page-filter collapse" id="collapseFilterLocation">
             <div style="height:150px; overflow-y:scroll;">
               <% $filter_4_values.each do |item| %>
-                <p class="match-option">
+                <p class="filter-option">
                 <input value="4" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
                 <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
                 </p>
               <% end %>
-              <p class="match-option">
+              <p class="filter-option">
               <input value="4" class="checkbox-input" type="checkbox" name="Delaware" id="Delaware" />
               <label class="checkbox-label" for="Delaware">Delaware</label></p>
-              <p class="match-option">
+              <p class="filter-option">
               <input value="4" class="checkbox-input" type="checkbox" name="District of Columbia" id="District of Columbia" />
               <label class="checkbox-label" for="District of Columbia">District of Columbia</label></p>
 
@@ -60,7 +60,7 @@
           <a class="input btn btn-lg btn-filter btn-search-page" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
           <div class="search-page-filter collapse" id="collapseFilterDegrees">
             <% $filter_5_values.each do |item| %>
-            <p class="match-option">
+            <p class="filter-option">
             <input value="5" class="checkbox-input" type="checkbox" name="<%= item.field_value %>" id="<%= item.field_value %>" />
               <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value.gsub("?","") %></label>
             </p>
