--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,11 +16,17 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext,greek-ext,greek,vietnamese,cyrillic,cyrillic-ext);
 
-$font-stack:    Arial, Helvetica, sans-serif;
+$font-stack: Roboto, arial, Helvetica, sans-serif;
+$font-light: 100;
+$font-reg: 300;
 $primary-type-color: #000;
 $primary-color: #219ab4;
 $primary-bg-color: #ffffff;
+
+$secondary-color: #005d83;
 $inverse-type: #ffffff;
 $lighter-bg-color: #dedede;
 $sign-in-bg: url('/assets/dental-web3.jpg');
@@ -34,6 +40,7 @@ html, body {
 	color: $primary-type-color;
 	font-family: $font-stack;
 	font-size: 16px;
+  font-weight: $font-reg;
 }
 body {
   min-height: 100vh;
@@ -42,7 +49,8 @@ body {
 
 nav {
   background-color: $primary-color;
-  height: 70px;
+  height: 120px;
+  outline: 20px solid $secondary-color;
 }
 .navbar {
 	border-radius: 0;
@@ -53,15 +61,32 @@ nav {
 .navbar-nav {
   position: relative;
   top: -30px;
-  right: 8px;
+  right: 35px;
 }
 .logo {
+  color: $inverse-type;
   font-size:20px;
+  font-weight: $font-light;
+  margin-left: 20px;
   position: relative;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   top: 20px;
 }
+.logo-img {
+  width: 100px;
+}
+.logo-text {
+  position: absolute;
+  left: 0px;
+  top:40px;
+}
 .container {
-	padding-top: 50px;
+	padding-top: 70px;
+}
+
+.form-control {
+  border:1px solid $primary-color;
 }
 .input {
 	width: 100%;
@@ -71,7 +96,6 @@ nav {
 	display: block;
 	margin-top: 40px;
 }
-
 
 .checkbox-label  {
 	position: relative;
@@ -108,15 +132,28 @@ nav {
 	opacity: 1; /*for fade in effect*/
 }
 
+.btn-inverse {
+  color: $primary-color;
+  background-color: $inverse-type;
+  border-color: $primary-color;
+  &:hover {
+    color: $inverse-type;
+    background-color: $primary-color;
+  }
+}
 // ************** sign in page ***************************
 .terms {
-  border:5px solid #eee;
-  height: 150px;
-  margin-bottom: 30px;
-  padding:10px;
-  overflow-y: scroll;
+  color: $primary-type-color;
+  // border:5px solid #eee;
+  // height: 150px;
+  // margin-bottom: 30px;
+  // padding:10px;
+  // overflow-y: scroll;
 }
 
+label {
+  font-weight: $font-light;
+}
 
 // ******************* FILTER STYLES HERE ****************
 .filter-option {
@@ -254,14 +291,6 @@ table td {
 
 //////////// DESKTOP /////////
 @media screen and (min-width: 768px) {
-  .logo {
-    font-size: 40px;
-    top:0px;
-  }
- 
-  .navbar-nav {
-    top:0px;
-  }
 
   body {
     background-image: $sign-in-bg;
@@ -270,12 +299,22 @@ table td {
     background-repeat: no-repeat;
     background-size: cover;
   }
-
+  nav {
+    height: 70px;
+  }
+  .navbar-nav {
+    top:0px;
+  }
+  .logo-text {
+    position: inherit;
+    top: 0px;
+    left: 0px;
+  }
   #sign-in-block {
     background-color: $primary-color;
     border-radius: 25px;
     color: $inverse-type;
-    padding: 5px 25px 25px;
+    padding: 15px 45px 45px;
   }
 
   .information-page > .collapse
