--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext,greek-ext,greek,vietnamese,cyrillic,cyrillic-ext);
 
 $font-stack: Roboto, arial, Helvetica, sans-serif;
-$font-light: 100;
-$font-reg: 300;
+$font-light: 300;
+$font-reg: 400;
 $primary-type-color: #000;
 $primary-color: #219ab4;
 $primary-bg-color: #ffffff;
@@ -145,6 +145,15 @@ nav {
 	max-width: 35px; /*an arbitratry number more than the icon's width*/
 	opacity: 1; /*for fade in effect*/
 }
+.btn-primary {
+  background-color: $primary-color;
+  border: none;
+  color: $inverse-type;
+  &:hover {
+    background-color: $accent-color;
+    color: $inverse-type;
+  }
+}
 
 .btn-inverse {
   color: $primary-color;
@@ -152,13 +161,14 @@ nav {
   border-color: $primary-color;
   &:hover {
     color: $inverse-type;
-    background-color: $primary-color;
+    background-color: $accent-color;
   }
 }
 
-a:link, a:visted {
+a, a:link, a:visted {
   color: $accent-color;
 }
+
 // ************** sign in page ***************************
 #sign-in-block {
     background-color: $primary-color;
@@ -170,11 +180,6 @@ a:link, a:visted {
   }
 .terms {
   color: $primary-type-color;
-  // border:5px solid #eee;
-  // height: 150px;
-  // margin-bottom: 30px;
-  // padding:10px;
-  // overflow-y: scroll;
 }
 .panel {
   color: $primary-type-color;
