--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,5 +1,5 @@
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="white-bg col-md-8 col-md-offset-2">
       <h2>Hi, <%= current_user.login %>! Let's help find the right dental program for you.</h2>
       <%= form_tag('/search') do %>
       <h3><%= label_tag(:q, "Enter one or more keywords") %></h3>
