--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           
           <div class="navbar-header">
             <div class="logo">
-            <a class="header-link" href="/index"><%= image_tag("adea-logo.png", class: "logo-img") %>
+            <a class="logo-link" href="/index"><%= image_tag("adea-logo.png", class: "logo-img") %>
             <span class="logo-text">Official Guide to Dental Schools</span></a>
             </div>
           </div>
