--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,14 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-fixed-top">
-      <!-- <div class="container"> -->
-        <div id="navbar">
-          
+    <header>
           <div class="navbar-header">
             <div class="logo">
             <a class="logo-link" href="/index"><%= image_tag("adea-logo.png", class: "logo-img") %>
             <span class="logo-text">Official Guide to Dental Schools</span></a>
             </div>
           </div>
-          <div class="nav navbar-nav pull-right">
+          <div class="header-nav">
             <% if current_user %>
                 <button class="btn navbar-btn btn-inverse ">
                   <a href="/index"><span class="glyphicon glyphicon-search"></span></a>
@@ -44,11 +41,7 @@
             <% end %>
           </div>
           
-        </div>
-        
-        
-      <!-- </div> -->
-    </nav>
+    </header>
     <div class="main-img">
        <%= image_tag('dental-stock2.jpg') %>
     </div>
