--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import 'variables';
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
@@ -20,21 +21,6 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext,greek-ext,greek,vietnamese,cyrillic,cyrillic-ext);
-
-/////////// colors and fonts ////////
-$font: Roboto, arial, Helvetica, sans-serif;
-$font-light: 300;
-$font-reg: 400;
-$primary-type-color: #000;
-$primary-color: #219ab4;
-$primary-bg-color: #ffffff;
-
-$secondary-color: #005d83;
-
-$accent-color: #f59c36;
-$inverse-type: #ffffff;
-$lighter-bg-color: #dedede;
-$sign-in-bg: url('/assets/dental-web3.jpg');
 
 
 
@@ -91,7 +77,7 @@ a, a:link, a:visted {
   padding-top: 70px;
 }
 
-.white-bg {
+.overlay{
   background: $primary-bg-color;
 }
 
@@ -143,7 +129,7 @@ a, a:link, a:visted {
 .form-control {
   border:1px solid $primary-color;
 }
-.input {
+.input-wide {
 	width: 100%;
 }
 
@@ -157,6 +143,8 @@ a, a:link, a:visted {
 	padding-left: 30px;
 	cursor: pointer;
 	font-weight: normal;
+  width: 100%;
+
 }
 .checkbox-label:before, .checkbox-label:after {
 	font-family: FontAwesome;
@@ -217,13 +205,14 @@ a, a:link, a:visted {
 
 .filter-option {
   background-color: $primary-bg-color;
-  border-bottom: 1px solid $lighter-bg-color;
+  border-bottom: 1px solid $secondary-color;
   min-height: 40px;
   margin: 5px 0 5px 0;
   padding: 10px;
 }
-.filter-option label {
-  width: 100%;
+
+.filter-option:last-child {
+  border-bottom: 0px;
 }
 
 /////////////////////////// buttons ///////////////////
@@ -238,9 +227,10 @@ a, a:link, a:visted {
   border: none;
   color: $inverse-type;  
 }
-.btn-filter {
+.btn-header {
 	margin: 1px 0 1px 0;
   text-align: left;
+  width: 100%;
 }
 
 .btn-inverse {
@@ -252,7 +242,7 @@ a, a:link, a:visted {
 
 // animation on arrow
 
-.btn-filter > span {
+.btn-header > span {
   transition: transform .5s;
 }
 
@@ -264,7 +254,20 @@ a, a:link, a:visted {
 }
 // **************** SCHOOL LISTING STYLES **********************
 
+.info-hed {
+  color: $secondary-color;
+}
 
+.info-well {
+  border-bottom: 1px solid $secondary-color;
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+}
+
+.info-subhed {
+
+}
 // ****************** RESPONSIVE TABLES **************
 
 table {
@@ -376,7 +379,11 @@ table td {
         display: block;
     }
 
-  #btn-search-filters, .btn-search-page > span {
+  #btn-search-filters, .nodisplay {
+    display: none;
+  }
+
+  .nodisplay {
     display: none;
   }
 }
